fixes spacing around header so it fills

--- a/dvdogs/public/stylesheets/dvdogs.css
+++ b/dvdogs/public/stylesheets/dvdogs.css
@@ -1,12 +1,13 @@
 /* basic elements */ 
 
 	body { 
-		/* color: beige; */ 
 		font-style: normal; 
 		font-variant: normal; 
 		font-weight: normal; 
 		font-family: "Trebuchet MS", Verdana, Arial, Helvetica, sans-serif; 
 		background-color: #7e8b4e;  
+		margin: 0;
+		padding: 0;
 	}
 
 	p   { 
@@ -66,6 +67,7 @@
     background-repeat: no-repeat;
     height: 190px;
     position: relative;
+	width: 100%;
   }
   
   #header {
